# BinaryFileApplication

./: CMakeLists.txt  LICENCE.md  README.md
.github/workflows/: cmake.yml  linux_builds.yml  macos_build.yml  macos_builds.yml  windows_builds.yml
include/Application/Backend/: backend_operations.h
include/Application/Facades/: user_interface.h
include/Application/Graphics/: display.h  widgets.h  window.h
src/: main.cpp
src/Backend/: backend_operations.cpp
src/Facades/: user_interface.cpp
src/Graphics/: display.cpp  widgets.cpp  window.cpp
